--- a/hep-th-0306133/Nrev00.tex
+++ b/hep-th-0306133/Nrev00.tex
@@ -308,7 +308,7 @@ depth3.2pt width0pt} \normalbaselines \rm}
 \def\Dbar{\mkern-1.5mu\raise0.4pt\hbox{$\not$}\mkern-.1mu {\rm D}\mkern.1mu}
 \def\Abar{\mkern1.mu\raise0.4pt\hbox{$\not$}\mkern-1.3mu A\mkern.1mu}
 \nopagenumbers
-\headline={\ifnum\pageno=1\hfill\else\draftdate\hfil{\headrm\folio}%
+\footline={\ifnum\pageno=1\hfill\else\draftdate\hfil{\headrm\folio}%
 \hfil\hphantom{\draftdate}\fi} \else\message{(This uses pseudo
 12pts fonts.} \hoffset=8mm \voffset=16mm
 \input lfont12 %pour sun
