--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-11-24 10:48:14 -0500 
+%% Created for Pete Su at 2019-11-28 08:15:24 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Moshe:2003xn,
+	Archiveprefix = {arXiv},
+	Author = {Moshe, Moshe and Zinn-Justin, Jean},
+	Date-Added = {2019-11-28 08:14:40 -0500},
+	Date-Modified = {2019-11-28 08:15:23 -0500},
+	Doi = {10.1016/S0370-1573(03)00263-1},
+	Eprint = {hep-th/0306133},
+	Journal = {Phys. Rept.},
+	Note = {\href{https://arxiv.org/abs/hep-th/0306133}{arXiv:hep-th/0306133}},
+	Pages = {69-228},
+	Primaryclass = {hep-th},
+	Slaccitation = {%%CITATION = HEP-TH/0306133;%%},
+	Title = {{Quantum field theory in the large N limit: A Review}},
+	Volume = {385},
+	Year = {2003},
+	Bdsk-Url-1 = {https://doi.org/10.1016/S0370-1573(03)00263-1}}
 
 @article{Hubeny:2014bla,
 	Archiveprefix = {arXiv},
