--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,46 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-11-28 08:15:24 -0500 
+%% Created for Pete Su at 2019-11-28 09:43:50 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Stephens:1993an,
+	Archiveprefix = {arXiv},
+	Author = {Stephens, Christopher R. and 't Hooft, Gerard and Whiting, Bernard F.},
+	Date-Added = {2019-11-28 09:43:47 -0500},
+	Date-Modified = {2019-11-28 09:43:47 -0500},
+	Doi = {10.1088/0264-9381/11/3/014},
+	Eprint = {gr-qc/9310006},
+	Journal = {Class. Quant. Grav.},
+	Pages = {621-648},
+	Primaryclass = {gr-qc},
+	Reportnumber = {THU-93-20, UF-RAP-93-11},
+	Slaccitation = {%%CITATION = GR-QC/9310006;%%},
+	Title = {{Black hole evaporation without information loss}},
+	Volume = {11},
+	Year = {1994},
+	Bdsk-Url-1 = {https://doi.org/10.1088/0264-9381/11/3/014}}
+
+@article{Hooft1974,
+	Abstract = {A gauge theory with colour gauge group U(N) and quarks having a colour index running from one to N is considered in the limit N → ∞, g2N fixed. It is shown that only planar diagrams with the quarks at the edges dominate; the topological structure of the perturbation series in 1/N is identical to that of the dual models, such that the number 1/N corresponds to the dual coupling constant. For hadrons N is probably equal to three. A mathematical framework is proposed to link these concepts of planar diagrams with the functional integrals of Gervais, Sakita and Mandelstam for the dual string.},
+	Author = {G.'t Hooft},
+	Date-Added = {2019-11-28 09:38:12 -0500},
+	Date-Modified = {2019-11-28 09:38:55 -0500},
+	Doi = {https://doi.org/10.1016/0550-3213(74)90154-0},
+	Issn = {0550-3213},
+	Journal = {Nuclear Physics B},
+	Number = {3},
+	Pages = {461 - 473},
+	Title = {A planar diagram theory for strong interactions},
+	Url = {http://www.sciencedirect.com/science/article/pii/0550321374901540},
+	Volume = {72},
+	Year = {1974},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/0550321374901540},
+	Bdsk-Url-2 = {https://doi.org/10.1016/0550-3213(74)90154-0}}
 
 @article{Moshe:2003xn,
 	Archiveprefix = {arXiv},
