--- a/gr-qc-9310006v1/9310006.tex
+++ b/gr-qc-9310006v1/9310006.tex
@@ -11,7 +11,7 @@
 \tolerance=1600
 \parskip=0pt
 \baselineskip= 6 true mm
-
+\hsize 5.25in
 \input epsf
 \special{!/magscale false def}
 
@@ -992,7 +992,8 @@ decreases.
 
 \midinsert
 \vskip 13.2 truecm
-\epsffile[10 10 50 50]{bhfig2.ps}
+\epsfbox[50 10 100 50]{bhfig2.ps}
+
 \noindent {Fig.~2. Mapping between black hole and white hole to give
 topologically trivial background.}
 \endinsert
