--- a/gr-qc-9310006v1/9310006.tex
+++ b/gr-qc-9310006v1/9310006.tex
@@ -10,7 +10,7 @@
 \magnification= \magstep1
 \tolerance=1600
 \parskip=0pt
-\baselineskip= 6 true mm
+\baselineskip= 13pt
 \hsize 5.25in
 \input epsf
 \special{!/magscale false def}
@@ -1342,7 +1342,8 @@ sections, we would argue that a bounce type phenomenon is a necessary
 consequence of the $S$-matrix Ansatz itself.
 \midinsert
 \vskip 10.5 truecm
-\epsffile[10 10 50 50]{bhfig3.ps}
+\epsffile[0 10 150 50]{bhfig3.ps}
+
 \centerline {Fig.~3. Penrose diagram for the  ``bounce'' model.}
 \endinsert
 It is clear that the bounce, relative to the standard point of view, is
