de-footnite-ify

--- a/hep-th-9611050/TASI3.tex
+++ b/hep-th-9611050/TASI3.tex
@@ -115,7 +115,7 @@ use of the BPS property.
 
 However, this subject remained obscure until the advent of string duality.  It
 was then observed that D-branes have precisely the correct properties to fill
-out duality multiplets, \cite{joeone} whose other members are fundamental string
+out duality multiplets \cite{joeone}, whose other members are fundamental string
 states and ordinary field-theoretic solitons.  Further, they are much simpler
 than ordinary solitons, and their bound states and other properties can be
 understood more explicitly.  Even before the role of D-branes was
@@ -193,12 +193,12 @@ are necessarily part of the spectrum of string theory, as one can start from
 the ordinary open string vacuum and by a continuous change of parameters ($R
 \to 0$) get to a state containing D-branes.
 
-We should mention some early papers\, \cite{early} in which
+We should mention some early papers \cite{early}, in which
 Dirichlet conditions were investigated as a potentially interesting variation
 of string theory in their own right.  The association of the Dirichlet
 condition with an actual hyperplane in spacetime came later, in the context of
 compactification of open string theory \cite{latera}, \cite{laterc}. It
-was then observed that the hyperplane was a dynamical object\, \cite{dlp}, hence
+was then observed that the hyperplane was a dynamical object \cite{dlp}, hence
 `D-brane,' and that it could be produced via 
 T-duality \cite{dlp}, \cite{hdual}, \cite{gdual}.
 
@@ -208,7 +208,7 @@ an object, the D-brane.  Fully Dirichlet conditions define the D-instanton.
 These boundary conditions were originally interpreted in terms of an off-shell
 probe of string theory \cite{offshell}.  It was then proposed to modify string
 theory by the inclusion of a gas of such objects, changing the short distance
-structure \cite{parton}.  It was later argued\, \cite{joecomb} that such
+structure \cite{parton}.  It was later argued \cite{joecomb} that such
 D-instantons were a necessary part of string theory and carried the
 combinatoric weight $e^{-O(1/g)}$ associated with large stringy
 nonperturbative effects \cite{shenk1}. It was also observed that the
@@ -405,7 +405,7 @@ But now eq.~(\ref{schur}) and Schur's lemma require $MM^{-T}$ to be
 proportional to the identity,
 so $M$ is either symmetric or antisymmetric.
 This gives
-two cases, up to choice of basis:\, \cite{sms}
+two cases, up to choice of basis: \cite{sms}
 \be
 {\bf a.\ \ }{\rm Symmetric\colon}\ \ M=M^T=I_N
 \qquad\qquad\qquad\qquad\qquad
@@ -584,7 +584,7 @@ related to this \cite{mirror}.
 
 The mass spectra of the theories at radius $R$ and $\ap/ R$ are identical
 when the winding and Kaluza-Klein modes are interchanged
-$n \leftrightarrow w$, \cite{tdual}
+$n \leftrightarrow w$ \cite{tdual},
 which takes
 \be
 \alpha^{25}_0 \rightarrow\alpha^{25}_0, \quad
@@ -833,7 +833,7 @@ interaction with the massless closed string fields, whose action was given
 in the first line of eq.~(\ref{stact}).
 Introduce coordinates $\xi^a$, $a = 0, \ldots p$ on the brane.  The
 fields on the brane are the embedding $X^\mu(\xi)$ and the gauge field
-$A_a(\xi)$.  The action is\, \cite{leigh}
+$A_a(\xi)$.  The action is \cite{leigh}
 \be
 S_p = -T_p \int d^{p+1}\xi\, e^{-\phi} \det\!^{1/2}\left(G_{ab} + B_{ab}
 + 2\pi\ap F_{ab}\right)\ , \label{dact}
@@ -1126,7 +1126,7 @@ projection removes half the states locally, here it relates the
 amplitude to find a string at some point to the amplitude to find it at the
 image point.
 
-The orientifold construction was discovered via $T$-duality\, \cite{dlp} and
+The orientifold construction was discovered via $T$-duality \cite{dlp} and
 independently from other points of
 view \cite{opentwist}, \cite{laterc}. One can of course consider more
 general orientifolds which are not simply
@@ -1331,7 +1331,7 @@ fermions.  The ground state is a
 Lorentz singlet and has odd 
 fermion number, $(-1)^F = -1$.  This assignment is necessary in order for
 $(-1)^F$ to be multiplicatively conserved.\footnote{In the `$-1$
-picture'\, \cite{fms}
+picture' \cite{fms}
 the matter part of the ground state vertex operator is the
 identity but the ghost part has odd fermion number.  In the `0 picture' this
 is reversed.\label{picfoot}} The GSO projection, onto states with even fermion
@@ -1669,7 +1669,7 @@ theory, there should be virtual $0$-brane world-lines that wind in a
 purely spatial direction.  Such world-lines are required by quantum
 mechanics, but note that they are essentially instantons, being localized
 in time.  A $T$-duality in the winding direction then gives a $(-1)$-brane.
-One of the first clues to the relevance of D-branes\, \cite{joecomb} was the
+One of the first clues to the relevance of D-branes \cite{joecomb} was the
 observation that D-instantons, having action $g^{-1}$, would contribute
 effects of order $e^{-1/g}$ as expected from the behavior of large orders of
 string perturbation theory \cite{shenk1}.
@@ -1766,7 +1766,7 @@ t)^{-(p+1)/2} (t/2\pi\alpha')^4 e^{- t{Y^2\over8\pi^2 \alpha'^2}}
 \nonumber\\
 &=& V_{p+1} 2\pi (4\pi^2\alpha')^{3-p} G_{9-p}(Y^2).
 \eea 
-Comparing with field theory calculations gives\, \cite{joeone}
+Comparing with field theory calculations gives \cite{joeone}
 \be
 \mu_p^2 = 2 \kappa^2 \tau_p^2 = 2\pi (4\pi^2\alpha')^{3-p}. \label{dcharge}
 \ee
@@ -1826,7 +1826,7 @@ The Dirichlet and orientifold 9-branes couple to an R-R 10-form,
 i (32 \mp N) {\mu_{10}\over 2} \int A_{10} ,
 \ee
 and the field equation from varying~$A_{10}$ is just $G =
-SO(32)$!\, \cite{rrex}
+SO(32)$! \cite{rrex}
 
 \section{Lecture 4: Advanced D-Mechanics}
 
@@ -1848,7 +1848,7 @@ turning on background fields, taking limits, and cluster decomposition.
 First, let us take the $T$-dual on all spatial directions and then the
 $R\to 0$ limit.  We are left with 16 D 0-branes at arbitrary positions. 
 But now cluster decomposition says\,\footnote
-{This is my paraphrase.  See Weinberg's text\, \cite{weinberg} for a more
+{This is my paraphrase.  See Weinberg's text \cite{weinberg} for a more
 discussion.} that if we can have a state with 16 0-branes in this room and
 none behind the moon, or vice versa, then we can also have a state with 16
 in each place, or none.  That is, states with arbitrary numbers of 0-branes
@@ -2103,7 +2103,7 @@ one-direction.  The anticommutator implies
 where $v_1$ is the length of the system. 
 The eigenvalues of $\Gamma^0 \Gamma^1$ are $\pm 1$ so those of the
 right-hand side are $M \pm v_1 (q_1^2 + q_2^2/g^2)^{1/2}/2\pi\ap$.  The left
-side is a positive matrix, giving the BPS bound on the tension\, \cite{schwarz}
+side is a positive matrix, giving the BPS bound on the tension \cite{schwarz}
 \be
 \frac{M}{v_1} \geq \frac{\sqrt{q_1^2 + q_2^2/g^2}}{2\pi\apm}\ . \label{fdbps}
 \ee
@@ -2162,7 +2162,7 @@ flux is of order $g$, its energy density is of order~$g$, and
 so the final tension is $(g^{-1} + O(g))/2\pi\apm$.  This is below the tension
 of the separated strings and of the same form as the BPS bound~(\ref{fdbps})
 for a $(1,1)$ string.  A more detailed calculation shows that the final
-tension saturates the bound, \cite{rract} so the state is supersymmetric.  In
+tension saturates the bound \cite{rract}, so the state is supersymmetric.  In
 effect, the F-string dissolves in the D-string, leaving flux behind.
 
 To calculate the number of BPS states we should put the strings in a box of
@@ -2258,14 +2258,14 @@ same (bosonic) state and $\ha 16\cdot 15$ states with the D-branes in
 different states, for a total of $8\cdot 16$ states.  But in addition, the
 two-branes can bind, and there are again $16$ states where the bound state
 binds to the 4-brane.  Indirect arguments for the existence of these bound
-states have been given, \cite{vafa1} and presumably it
+states have been given \cite{vafa1}, and presumably it
 can be demonstrated directly by the
 method used for 0-0 bound states in
 free space.  The total,
 tensoring again with the 4-brane ground states, is $9 \cdot 16 \cdot 256$.
 
 For $n$ 0-branes and one 4-brane, the degeneracy $D_n$ is given by the
-generating functional\, \cite{vafa1}
+generating functional \cite{vafa1}
 \be
 \sum_{n=0}^\infty q^n D_n\ =\ 256\ \prod_{k=1}^\infty \left( \frac{1 + q^k}{1
 - q^k}\right)^8\ ,  \label{degen}
@@ -2282,7 +2282,7 @@ charge to the 6-brane
 by turning on flux, but there is no way to do this and saturate the
 BPS bound.  So it appears that there are {\it no} supersymmetric bound
 states.  Incidentally, and unlike the 0-2 case, the 0-6 interaction is
-repulsive, both at short distance and\, \cite{horpriv} at long.
+repulsive, both at short distance and \cite{horpriv} at long.
 
 {\it 0-8 bound states:} 
 
@@ -2460,7 +2460,7 @@ different problem, because the D-brane is now wrapped on a curved space,
 and the required spectrum has been found \cite{bsv}.} 
 
 To relate the coupling to the size of the eleventh dimension we need to
-compare the respective actions, \cite{wit}
+compare the respective actions \cite{wit},
 \be
 \frac{1}{2\kappa_0^2 g^2} \int d^{10} x\, \sqrt{-g_{\rm s}} R_{\rm s}
 = \frac{2\pi R}{2\kappa_{11}^2} \int d^{10} x\, \sqrt{-g_{11}} R_{11}\ .
@@ -2512,7 +2512,7 @@ an orientifold plane, which is essentially a boundary of spacetime.  As
 the coupling grows, the distance to the divergence and the boundary
 necessarily shrinks, so that they disappear into it in the strong coupling
 limit: they become part of the gauge dynamics of the nine-dimensional
-boundary of M-theory, \cite{horwit} to be discussed in more detail below.
+boundary of M-theory \cite{horwit}, to be discussed in more detail below.
 
 One can see further indication of the eleventh dimension in the dynamics
 of the D 2-brane.  In $2+1$ dimensions, the vector field on the brane is
@@ -2536,7 +2536,7 @@ R' &=& R^{-1} \left[ \apm \right] , \nonumber\\
 g' &=& g R^{-1} \left[ {\ap}^{1/2} \right] \ .
 \eea
 Now use Type~I - heterotic duality to write this as a Type~I theory
-with\, \cite{wit}
+with \cite{wit}
 \bea
 R_{\rm I} &=& g'^{-1/2} R'\ =\ g^{-1/2} R^{-1/2} \left[ \apm^{3/4} \right],
 \nonumber\\ 
@@ -2605,7 +2605,7 @@ The low energy supergravity theory for this compactification has a
 continuous symmetry $E_{6(6)}$ which is a noncompact version of
 $E_6$ \cite{julia}.  This is one of those supergravity properties that was
 ignored for some time, because there is no sign of it in (perturbative)
-string theory. But now we know better:\, \cite{hullt} a discrete subgroup
+string theory. But now we know better: \cite{hullt} a discrete subgroup
 $E_{6(6)}(\Z)$ is supposed to be a good symmetry of the full theory.
 % Help, I am being held prisoner by Brian Greene and Costas Efthimiou and
 % forced to write these lectures.
@@ -2744,13 +2744,13 @@ $p$-$p'$ strings of the D-brane system.
 Thus it seems that one can sensibly discuss an instanton smaller than the
 string scale.  This is in conflict with the idea that the
 string length is a minimum distance.  Indeed, there were arguments to this
-effect made by Shenker, \cite{shenk2} and there have been recent studies of
+effect made by Shenker \cite{shenk2}, and there have been recent studies of
 D-brane scattering suggesting that D-branes do indeed probe a shorter length
 scale \cite{bachas}, \cite{short}. This should be covered in detail in
 Steve's lectures.  There have been many other interesting recent applications of
 this idea, in particular by Seiberg, but I will not have time to pursue this.
 
-I will sketch a different example of the D-brane as probe, \cite{tensors}
+I will sketch a different example of the D-brane as probe \cite{tensors},
 similar in nature to the instanton but simpler in its field content.  This is
 the blowing up of a $\Z_2$ fixed point.  It is known that twisted-sector moduli
 have the interpretation of smoothing out the orbifold geometry.  With a D-brane
@@ -2831,10 +2831,10 @@ has two hypermultiplets and two vector multiplets, which
 are Higgsed down to one
 hypermultiplet and one vector multiplet. 
 The idea of
-Douglas\, \cite{dougprobe} is that the metric on this moduli space, as seen in
+Douglas \cite{dougprobe} is that the metric on this moduli space, as seen in
 the kinetic term for the D-string fields, should be the smoothed orbifold
 metric.  It is straightforward to verify this, and we omit the
-details \cite{tensors}.  The result is the Eguchi-Hanson metric, \cite{ale} which
+details \cite{tensors}.  The result is the Eguchi-Hanson metric \cite{ale}, which
 is the correct (hyper-K\"ahler) metric on the blown-up orbifold.  This
 construction is known as the hyper-K\"ahler quotient \cite{hyper}.  This
 geometry seems to make sense even when its scale is far shorter than the
@@ -2846,7 +2846,7 @@ orbifolds \cite{cvjmyers}.
 Before the significance of D-branes was recognized, the R-R charged objects
 required by string duality were believed to be black
 $p$-branes \cite{hullt}--\cite{coni}.
-Such solutions exist for any tensor gauge charge, \cite{blackp} with the source
+Such solutions exist for any tensor gauge charge \cite{blackp}, with the source
 essentially hidden in the singularity.  It is interesting to consider the
 relation between these two kinds of object.
 
@@ -2878,7 +2878,7 @@ One rather prosaic scenario for what all this means is that string theory
 really can be defined as some closed string field theory, and the D-branes are
 just solitons of this theory.  The low energy action~(\ref{gnract}) is not
 valid for these solitons, but the full closed string action would correctly
-describe the D-branes.  My own prejudice\, \cite{lesh} is that string field
+describe the D-branes.  My own prejudice \cite{lesh} is that string field
 theory is not likely to be a useful description beyond perturbation theory.
 String duality has reinforced this, in that each string theory
 appears to be an effective theory with a very specific range of validity.
@@ -2898,7 +2898,7 @@ by the black hole entropy \cite{sv}.  Because of the close analogy between
 black hole mechanics and thermodynamics, there have been many attempts to
 give a statistical mechanical interpretation to the black hole entropy, but
 this is the first time that it has been done in a controlled way.\footnote
-{Larsen and Wilczek\, \cite{larwil} had applied the same strategy to an NS black
+{Larsen and Wilczek \cite{larwil} had applied the same strategy to an NS black
 % Help, I am being held prisoner by Brian Greene and Costas Efthimiou and
 % forced to write these lectures.
 hole, but here the system remains a black hole even at weak coupling and so
@@ -2922,8 +2922,8 @@ include\,\footnote
 {I apologize in advance for identifying only a small number of papers out of
 a large literature, but these seem to have been highlights at least in a
 certain direction of development.} counting of states of some nonextremal
-black holes\, \cite{nonex} and comparisons of the decay rates of black holes and
-D-branes\, \cite{decay} even at a fairly high level of detail.\, \cite{grey} 
+black holes \cite{nonex} and comparisons of the decay rates of black holes and
+D-branes \cite{decay} even at a fairly high level of detail. \cite{grey} 
 Yet, even while there is some indication that black holes might be described by
 ordinary quantum mechanics, it is important to remember that there is a paradox
 here.  Twenty years of attempts to show that information is preserved in black
@@ -2957,7 +2957,7 @@ level, they merely provide, in the Type I and Type II limits, a more precise
 description of the R-R solitons in the spectrum.  Yet it may be that in fact
 they are closer than strings to being the fundamental degrees of freedom
 needed to define the whole picture.  The fact that they probe shorter
-distance scales\, \cite{short} and perhaps the unexpected successes of 
+distance scales \cite{short} and perhaps the unexpected successes of 
 D-brane--black hole quantum mechanics described above suggest that this may
 be so.  Thus, the D-brane Hamiltonian, or some structure abstracted from
 it, may have a much greater range of validity than the perturbative
