--- a/helpers/fixarxiv-palatino.tex
+++ b/helpers/fixarxiv-palatino.tex
@@ -23,11 +23,8 @@ bookmarksopenlevel=10
 \usepackage[dotinlabels]{titletoc}
 \titlelabel{{\thetitle}.\quad}
 
-% different \sum and also fixes underbraces
 \input{../helpers/mnsymbol.tex}
-
-% optional
-
+\input{../helpers/fix-underbrace.tex}
 %\input{../helpers/revtex-12-fix.tex}
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
