--- a/0911.2201/artzeno.tex
+++ b/0911.2201/artzeno.tex
@@ -44,8 +44,6 @@ bookmarksopenlevel=10
 \usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.1}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
 
 \input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
@@ -110,7 +108,7 @@ bookmarksopenlevel=10
 %\collaboration{}
 %\noaffiliation
 
-\date{\today}
+\date{11 November 2009}
 
 \begin{abstract}
 If frequent measurements ascertain whether a quantum system is still in a given subspace, it remains in that subspace and a quantum Zeno effect takes place. The limiting time evolution within the projected subspace is called quantum Zeno dynamics. This phenomenon is related to the limit of a product formula obtained by intertwining the time evolution group with an orthogonal projection.
