--- a/1001.1926/1001.1926.tex
+++ b/1001.1926/1001.1926.tex
@@ -14,6 +14,28 @@
 \usepackage{epsfig}
 \usepackage{verbatim}
 %
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,pagecolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+\sloppy
+
+
 \begin{document}
 %
 % For posting on archives
