--- a/gr-qc-0010055/bh-evaporation-notes.tex
+++ b/gr-qc-0010055/bh-evaporation-notes.tex
@@ -9,18 +9,36 @@
 \renewcommand{\theequation}{\thesection.\arabic{equation}}
 
 \usepackage{graphicx}
-\usepackage{mathpazo}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.1}
-\usepackage{hyperref}
-\urlstyle{same}
-\hypersetup{colorlinks=true}
-\hypersetup{urlcolor=blue}
-\hypersetup{linkcolor=blue}
-\hypersetup{citecolor=blue}
-%\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={7.2in, 9.8in}, left=.7in, right=.7in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
+\hbadness=2000
 \usepackage[small]{titlesec}
+\usepackage[dotinlabels]{titletoc}
+\titlelabel{{\thetitle}.\quad}
+
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \usepackage{amssymb}
 
