--- a/quant-ph-0004090/notes.tex
+++ b/quant-ph-0004090/notes.tex
@@ -1,4 +1,7 @@
 \documentclass[12pt]{article}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+
 \usepackage[colorlinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
@@ -12,17 +15,25 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-%\usepackage{amssymb}
-\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
+%\usepackage[noBBpl,sc,osf]{mathpazo}
 \linespread{1.1}
-\usepackage[letterpaper, margin=1.1in]{geometry}
+\usepackage[papersize={7.1in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+\usepackage[dotinlabels]{titletoc}
+\titlelabel{{\thetitle}.\quad}
+
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \usepackage{epsf}
 %\pagestyle{headings}
 %\voffset1.5cm%not necessary for rest of world
 
-\input{../helpers/fix-underbrace.tex}
 
 \begin{document}
 
@@ -362,7 +373,6 @@ in quantum mechanics, and will at least pay lip service to important
 applications in field theory. I will finish with a summary and a list of
 embarrassing omissions.
 
-\vspace{1cm}
 I will conclude with a few apologies.
 First, an educated reader might get the impression that the outline
 given above contains for the most part standard material. S/he is
@@ -743,13 +753,13 @@ obeys the correct boundary conditions, the paths $y(t)$ over which we
 integrate go from $y(0)=0$ to $y(T)=0$.
 The action for the path $q_c(t)+y(t)$ can be
 written as a power series in $y$:
-\beano
-S[q_c(t)+y(t)]&=&\int_0^T dt\left(\half m{{\dot q}_c}^2
--\half m\om^2{q_c}^2\right)
+\begin{multline*}
+S[q_c(t)+y(t)] = \int_0^T dt\left(\half m{{\dot q}_c}^2
+-\half m\om^2{q_c}^2\right)\\
 +\underbrace{(\mbox{linear in $y$})}_{=0}
 +\int_0^T dt \left(\half m {\dot y}^2
 -\half m\om^2 y^2\right).
-\eeano
+\end{multline*}
 The term linear in $y$ vanishes by construction:
 $q_c$, being the classical path, is that path for which the action is
 stationary! So we may write
@@ -2635,8 +2645,9 @@ G^{(2)}(x_1,x_2)={
 \]
 Since we have only computed the numerator and denominator to order
 $\la$, we can rewrite this expression in the following way:
-\[
-G^{(2)}(x_1,x_2)={
+\begin{multline*}
+G^{(2)}(x_1,x_2)=\\
+{
 \left(\begin{array}{c}
 \left\{\Delta_F(x_1-x_2)
 -{i\la\over2}\int d^4x\,\Delta_F(x_1-x)\Delta_F(x-x)\Delta_F(x-x_2)
@@ -2647,7 +2658,7 @@ G^{(2)}(x_1,x_2)={
 \over
 1-{i\la\over8}\int d^4x\,\Delta_F(x-x)^2+o(\la^2)
 }.
-\]
+\end{multline*}
 We can now cancel the second factor in the numerator against
 the denominator, {\em to order $\la$}, resulting in
 \[
@@ -2857,12 +2868,12 @@ K_E=J'\int\prod_k da_k\,e^{-\sum_k a_k^2\la_k/2\hbar},
 where $J'$ is the Jacobian of the transformation from $y(\tau)$ to
 $\{a_k\}$. \eqref{inst5} is a product of uncoupled Gaussian integrals;
 the result is
-\[
-K_E=J'\prod_k\left({2\pi\hbar\over\la_k}\right)^{1/2}
-=J'\prod_k(2\pi\hbar)^{1/2}(\prod_k \la_k)^{-1/2}
-=J'\prod_k(2\pi\hbar)^{1/2}
+\begin{align*}
+K_E &=J'\prod_k\left({2\pi\hbar\over\la_k}\right)^{1/2}\\
+&=J'\prod_k(2\pi\hbar)^{1/2}(\prod_k \la_k)^{-1/2}\\
+&=J'\prod_k(2\pi\hbar)^{1/2}
 {\det}^{-1/2}\left(-{d^2\over d\tau^2}+V''(q_c)\right),
-\]
+\end{align*}
 where we have written the product of eigenvalues as the determinant of
 the Schroedinger operator on the space of functions vanishing at
 $\pm\be/2$.
