--- a/1001.5212/NGcounting.tex
+++ b/1001.5212/NGcounting.tex
@@ -1,5 +1,20 @@
 \pdfoutput=1
-\documentclass[final,3p,times,12pt,a4paper,sort&compress]{elsarticle}
+\documentclass[final,2p,times,12pt,sort&compress]{elsarticle}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,pagecolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 
 \usepackage{amssymb,amsmath}
 \usepackage{graphicx}
@@ -8,6 +23,8 @@
 \usepackage{mathrsfs}
 \usepackage{isotope}
 \usepackage{tikz}
+
+\date{6 Apr 2010}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% personal definitions
