--- a/quant-ph-0004090/notes.tex
+++ b/quant-ph-0004090/notes.tex
@@ -15,7 +15,7 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[noBBpl,sc,osf]{mathpazo}
+\usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.1}
 \usepackage[papersize={7.1in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
