--- a/helpers/fix-underbrace.tex
+++ b/helpers/fix-underbrace.tex
@@ -1,4 +1,5 @@
 \makeatletter
+\@ifpackageloaded{amsmath}{}{\RequirePackage{amsmath}}
 
 \DeclareFontFamily{OMX}{MnSymbolE}{}
 \DeclareSymbolFont{largesymbolsX}{OMX}{MnSymbolE}{m}{n}
