--- a/quant-ph-0004090/notes.tex
+++ b/quant-ph-0004090/notes.tex
@@ -15,7 +15,7 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[noBBpl,sc]{mathpazo}
+%\usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.1}
 \usepackage[papersize={7.1in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
@@ -24,7 +24,7 @@ bookmarksopenlevel=10
 \usepackage[dotinlabels]{titletoc}
 \titlelabel{{\thetitle}.\quad}
 
-\input{../helpers/mnsymbol.tex}
+%\input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
 %\input{../helpers/revtex-12-fix.tex}
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
