--- a/1109.3593/dispersion-JHEP.tex
+++ b/1109.3593/dispersion-JHEP.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------
-\documentclass[11pt,a4paper]{article}
+\documentclass[12pt]{article}
 \pdfoutput=1
 \usepackage{jheppub}
 %\documentclass[prd,twocolumn,showpacs,a4paper,superscriptaddress,nofootinbib]{revtex4}
@@ -8,6 +8,39 @@
 %\usepackage{mathrsfs}
 %\usepackage[innercaption]{sidecap}
 %\usepackage{}
+
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.1}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+\date{09 Nov 2011}
+\usepackage[dotinlabels]{titletoc}
+\titlelabel{{\thetitle}.\quad}
+
+
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \newcommand{\diff}{\text{d}}
 \newcommand{\dDx}{\text{d}^D\hspace{-0.4ex}x\,}
@@ -65,7 +98,7 @@ of objects hovering right outside but extremely close to their gravitational rad
 can result in a mechanism for Hawking-like emission.}
 %-----------------------------------------------------------------------
 \keywords{Hawking radiation, trans-Planckian problem, black hole mimickers, modified dispersion relations \\
-14-09-2011; \LaTeX-ed \today}
+14-09-2011; \LaTeX-ed 09 Nov 2011}
 
 %\pacs{04.62.+v, 03.75.Kk, 04.70.Dy}
 \maketitle
