--- a/1003.0720/OlsonRalph1.tex
+++ b/1003.0720/OlsonRalph1.tex
@@ -1,7 +1,38 @@
 
-\documentclass[aps,prl,twocolumn,showpacs]{revtex4}
+\documentclass[aps,prl,showpacs,12pt]{revtex4}
 
 \usepackage{graphicx, amsmath}
+
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.1}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+\usepackage[dotinlabels]{titletoc}
+\titlelabel{{\thetitle}.\quad}
+
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \begin{document}
 
@@ -14,7 +45,7 @@
  \author{Timothy C. Ralph}
 \affiliation{Centre for Quantum Computing Technology, Department of Physics, University of Queensland, St Lucia, Queensland 4072, Australia}
 
-\date{\today}
+\date{March 3, 2010}
 
 \begin{abstract}
 We note that massless fields within the future and past light cone may be quantized as independent systems.  We show that the vacuum is an entangled state of these systems, exactly mirroring the known entanglement between the spacelike separated Rindler wedges.   We describe a detector which exhibits a thermal response to the vacuum when switched on at $t=0$.  The feasibility of experimentally detecting this effect is discussed.
