--- a/1709.05757/ms.tex
+++ b/1709.05757/ms.tex
@@ -1,11 +1,10 @@
 \documentclass[aps,prd,preprintnumbers,nofootinbib,showpacs,11pt]{revtex4}%
 \usepackage{graphicx}
-\usepackage{bm,latexsym,amsmath,amssymb,amsfonts,mathrsfs}
+\usepackage{latexsym,amsmath,amssymb,amsfonts,mathrsfs}
 \usepackage{color}
 \usepackage{subfigure}
 \input{colordvi.tex}
 \usepackage{soul}
-\usepackage{bm}
 
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
@@ -32,6 +31,7 @@ bookmarksopenlevel=10
 \usepackage[dotinlabels]{titletoc}
 \titlelabel{{\thetitle}.\quad}
 \usepackage{mathtools}
+\usepackage{bm}
 
 \input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
@@ -2892,15 +2892,12 @@ in the R region}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Here, we consider the correlation function with $x$ in the R region using the description 
 in the R Rindler spacetime. In this case, we have 
-\begin{eqnarray}
-&&\hspace{-1cm}
-\langle0,M|\phi_{\rm h}(x)\phi_{\rm h}(z(\tau'))|0,M\rangle
-\nonumber\\
-&=&
+\begin{multline}
+\langle0,M|\phi_{\rm h}(x)\phi_{\rm h}(z(\tau'))|0,M\rangle =\\
 \int_0^\infty d\omega \int \int d^2 k_\perp
 \left[v_j^R(x)v_j^{\rm R*}(z(\tau')){1\over 1-e^{-2\pi \omega/a}}
 +v_j^{\rm R*}(x)v_j^{\rm R}(z(\tau')){1\over e^{2\pi \omega/a}-1}\right],
-\end{eqnarray}
+\end{multline}
 where $x$ is specified by the coordinates $(\tau,\xi,\bm x_\perp)$.
 We consider the first term of the integration, 
 \begin{multline}
@@ -2930,10 +2927,11 @@ where $\Theta$ is defined as $2\alpha\beta\Theta={\alpha^2+\beta^2+\gamma^2}$, a
 ${\cal B}_{\mu-1/2}^{-\nu-1/2}(\zeta)$ is the Legendre function, 
 which is satisfied under the conditions Re$(\nu\pm\mu)>-1$ and Re$\nu>-1$, 
 and the formula on page 172 of Ref. \cite{Magnus}, 
-\begin{eqnarray}
-{\cal B}_{i\omega/a-1/2}^{-1/2}(\Theta)={1\over \sqrt{2\pi}}{1\over i\omega/a}{1\over (\Theta^2-1)^{1/4}}
+\begin{multline}
+{\cal B}_{i\omega/a-1/2}^{-1/2}(\Theta)=\\
+{1\over \sqrt{2\pi}}{1\over i\omega/a}{1\over (\Theta^2-1)^{1/4}}
 \left\{\left(\Theta+\sqrt{\Theta^2-1}\right)^{i\omega/a}-\left(\Theta+\sqrt{\Theta^2-1}\right)^{-i\omega/a}\right\}.
-\end{eqnarray}
+\end{multline}
 Then we have
 %\begin{eqnarray}
 %\int_0^\infty dk_\perp k_\perp 
@@ -2944,17 +2942,14 @@ Then we have
 %\end{eqnarray}
 %with $\Theta={e^{a\xi}+e^{-a\xi}(1+a^2 x_\perp^2)\over 2}$. Using $
 %|\Gamma(i\omega/a+1)|^2={\pi (\omega/a)/ \sinh (\pi\omega/a)}$
-\begin{eqnarray}
-&&\hspace{-1cm}
+\begin{multline}
 \int_0^\infty d\kappa\kappa
-K_{i\omega/a}(\kappa e^{a\xi}/a) K_{i\omega/a}(\kappa/a) J_0(\kappa x_\perp) 
-\nonumber\\
-&=&
+K_{i\omega/a}(\kappa e^{a\xi}/a) K_{i\omega/a}(\kappa/a) J_0(\kappa x_\perp) =\\
 { \pi a^2 e^{-a\xi} 
  \over 4i\sinh (\pi\omega/a)} {1\over \sqrt {\Theta^2-1}}
 \left\{\left(\Theta+\sqrt{\Theta^2-1}\right)^{i\omega/a}-\left(\Theta+\sqrt{\Theta^2-1}\right)^{-i\omega/a}\right\},
 \label{KKJ}
-\end{eqnarray}
+\end{multline}
 where $\Theta$ has the expression $\Theta={(e^{a\xi}+e^{-a\xi}(1+a^2 x_\perp^2))/ 2}$. 
 In the R region, we have
 \begin{eqnarray}
