--- a/1902.10469/GtH_BH_Erice_2018.tex
+++ b/1902.10469/GtH_BH_Erice_2018.tex
@@ -7,7 +7,7 @@
  \usepackage{amssymb,amsmath}
  \usepackage{graphicx} \usepackage{epstopdf}
 	% \usepackage{mathrsfs}	% allows me to use  \mathscr{I} %
- \parskip=5pt											% MAY BE ERASED or REPLACED
+% \parskip=5pt											% MAY BE ERASED or REPLACED
  \renewcommand{\thesection}{\arabic{section}}					% MAY BE ERASED or REPLACED
  \renewcommand{\theequation}{\thesection.\arabic{equation}}		% MAY BE ERASED or REPLACED
 % Counts equations as (section#. eq#)
@@ -15,6 +15,30 @@
 \mathsurround=1pt      % strongly preferred
 % \renewcommand{\thefootnote}{\alph{footnote}}				% MAY BE ERASED or REPLACED
 
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.1}
+
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 %  PLEASE DO NOT ERASE THE NEWCOMMANDS AND DEFS BELOW !!! %
  \newcommand{\crla}[1]{\quad\hbox{\scriptsize{#1}}\label{#1}\\[2pt]}
  \newcommand{\crlb}[1]{\label{#1}\\[2pt]}
@@ -91,6 +115,12 @@
 				%\publishversion		
 				%\journalversion
 \publishversion
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+\usepackage[dotinlabels]{titletoc}
+\titlelabel{{\thetitle}.\quad}
 
 %  \testprintversion   
 
