--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-12-01 09:45:40 -0500 
+%% Created for Pete Su at 2019-12-02 07:32:51 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Hooft:2019nmf,
+	Archiveprefix = {arXiv},
+	Author = {Hooft, Gerard t.},
+	Booktitle = {{56th International School of Subnuclear Physics: From gravitational waves to QED, QFD and QCD (ISSP 2018) Erice, Italy, June 14-23, 2018}},
+	Date-Added = {2019-12-02 07:32:45 -0500},
+	Date-Modified = {2019-12-02 07:32:45 -0500},
+	Eprint = {1902.10469},
+	Primaryclass = {gr-qc},
+	Slaccitation = {%%CITATION = ARXIV:1902.10469;%%},
+	Title = {{The quantum black hole as a theoretical lab, a pedagogical treatment of a new approach}},
+	Year = {2019}}
 
 @article{Olson:2010jy,
 	Archiveprefix = {arXiv},
